bug[gradle]: 解决 IdeaProxyLambdaMetaTest 和 LambdaUtilsTest 测试失败问题；升级 gradle 到 7.2 以支持 jdk17。