@@ -2,7 +2,7 @@ import java.time.LocalDateTime
 
 allprojects {
     group = 'com.baomidou'
-    version = "3.5.3.1"
+    version = "3.5.3.1-telecwin"
 }
 
 ext {
@@ -174,6 +174,9 @@ subprojects {
     test {
         dependsOn("cleanTest", "generatePomFileForMavenJavaPublication")
         useJUnitPlatform()
+        // 解决 IdeaProxyLambdaMetaTest 和 LambdaUtilsTest 测试失败问题
+        jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"]
         exclude("**/phoenix/**")
         exclude("**/postgresql/**")
         exclude("**/generator/**")
